# assignment1

part1/: CMakeLists.txt  README.md  build.sh
part1/src/: part1.cpp
part1/src/shaders/: triangle.frag  triangle.vert
part2/: CMakeLists.txt  README.md  build.sh
part2/src/: part2.cpp
part2/src/shaders/: triangle.vert
part3/: CMakeLists.txt  README.md  build.sh
part3/src/shaders/: triangle.frag
part4/: CMakeLists.txt  README.md  build.sh
